(fix) Layout now stretches entire screen. Shelf is now in fixed position and only shows when requested

--- a/src/app/components/Panel/Panel.scss
+++ b/src/app/components/Panel/Panel.scss
@@ -2,7 +2,7 @@
     background: #fff;
     width: 680px;
     height: 100%;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     bottom: 0;
